# wacker

./: Cargo.toml  README.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
wacker/: Cargo.toml  build.rs
wacker-api/: Cargo.toml  build.rs
wacker-api/proto/: module.proto
wacker-api/src/: config.rs  lib.rs
wacker-cli/: Cargo.toml
wacker-cli/src/: commands.rs  main.rs
wacker-cli/src/commands/: delete.rs  list.rs  logs.rs  restart.rs  run.rs  serve.rs  stop.rs
wacker-daemon/: Cargo.toml  build.rs
wacker-daemon/src/: main.rs
wacker/proto/: module.proto  wacker.proto
wacker/src/: config.rs  lib.rs  main.rs  module.rs  run.rs  runtime.rs  server.rs  utils.rs
wacker/src/runtime/: cli.rs  host.rs  http.rs  logs.rs  mod.rs  wasi.rs
wacker/tests/: server.rs
wacker/tests/common/: mod.rs
wacker/tests/wasm/: cli.wasm  hello.wasm  http.wasm  http_client.wasm  time.wasm
