[workspace]
resolver = "2"
members = [
    "wacker",
    "wacker-daemon",
    "wacker-cli",
]

[workspace.package]
version = "0.9.0"
authors = ["Xinzhao Xu"]
edition = "2021"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "wasi"]
repository = "https://github.com/wacker-dev/wacker"
license = "Apache-2.0"

[workspace.dependencies]
wacker = { path = "wacker", version = "0.9.0" }

anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = { version = "0.11.0", features = ["zstd", "gzip"] }
ahash = "0.8.11"
