[package]
name = "wacker-api"
description = "wacker API"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
const_format = "0.2.32"

[build-dependencies]
tonic-build = "0.10.2"
