[package]
name = "wacker-api"
description = "wacker API"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dirs.workspace = true
tokio.workspace = true
tonic.workspace = true

prost = "0.12.3"
const_format = "0.2.32"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.10.2"
