[package]
name = "wacker-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
tonic = "0.10.2"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0"
tower = "0.4.13"
wacker-api = { path = "../wacker-api" }
