[package]
name = "wacker-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wacker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wacker-api = { path = "../wacker-api" }
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
tonic = "0.10.2"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0.1"
tower = "0.4.13"
tabled = "0.14.0"
