[package]
name = "wacker-cli"
description = "wacker client"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wacker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wacker.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true

tabled = "0.14.0"
