[package]
name = "wacker-daemon"
description = "wacker daemon cli"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wackerd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wacker.workspace = true

anyhow.workspace = true
clap.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
tonic.workspace = true
sled.workspace = true

env_logger = "0.11.1"
chrono = "0.4.34"
