[package]
name = "wacker"
description = "wacker core"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
ahash.workspace = true

dirs = "5.0.1"
wasi-common = { version = "22.0.0", features = ["tokio"] }
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
wasmtime-wasi-http = "22.0.0"
wasmparser = "0.209.1"
cap-std = "3.0.0"
rand = "0.8.5"
tower = "0.4.13"
prost = "0.12.6"
async-stream = "0.3.5"
hyper = "1.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
bytes = "1.5.0"
async-trait = "0.1.77"
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
parking_lot = "0.12.3"
env_logger = "0.11.3"
chrono = "0.4.38"
sled = "0.34.7"
log = "0.4.21"
rayon = "1.10.0"
reqwest = "0.12.5"
# We do not rely on this directly, in order to fix the cross-compiling issue
openssl = { version = "0.10.64", features = ["vendored"] }

[build-dependencies]
anyhow.workspace = true
tonic-build = "0.11.0"
