[package]
name = "wacker"
description = "wacker core"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
ahash.workspace = true

dirs = "5.0.1"
wasi-common = { version = "25.0.1", features = ["tokio"] }
wasmtime = "25.0.1"
wasmtime-wasi = "25.0.1"
wasmtime-wasi-http = "25.0.1"
cap-std = "3.3.0"
rand = "0.8.5"
tower = "0.4.13"
prost = "0.13.1"
async-stream = "0.3.5"
hyper = "1.4.1"
hyper-util = "0.1.6"
http = "1.1.0"
http-body-util = "0.1.2"
bytes = "1.7.1"
async-trait = "0.1.81"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
parking_lot = "0.12.3"
env_logger = "0.11.3"
chrono = "0.4.38"
sled = "0.34.7"
log = "0.4.22"
rayon = "1.10.0"
reqwest = "0.12.8"
# We do not rely on this directly, in order to fix the cross-compiling issue
openssl = { version = "0.10.66", features = ["vendored"] }

[build-dependencies]
anyhow.workspace = true
tonic-build = "0.12.1"
